# bullrun

./: README.md  docker-compose.yml
bullrun-backend/: Dockerfile  pyproject.toml
bullrun-backend/.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  atexit.data.json  atexit.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pdb.data.json  pdb.meta.json  posix.data.json  posix.meta.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  threading.data.json  threading.meta.json  time.meta.json  types.data.json  types.meta.json  typing.meta.json
bullrun-backend/.mypy_cache/3.6/bullrun_backend/: __init__.data.json  __init__.meta.json
bullrun-backend/.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.meta.json
bullrun-backend/.mypy_cache/3.6/email/: __init__.meta.json  charset.meta.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
bullrun-backend/.mypy_cache/3.6/http/: __init__.data.json  __init__.meta.json  client.data.json  client.meta.json  cookiejar.meta.json
bullrun-backend/app/: __init__.py  redis_client.py
bullrun-backend/app/api/: alpha_vantage.py
bullrun-backend/app/monitor/: yahoo_finance.py
bullrun-backend/tests/: test_bullrun_backend.py
(+139 files in other folders)
