[tool.poetry]
name = "bullrun-backend"
version = "0.1.0"
description = ""
authors = ["Martin McKeaveney <martin@squarefoot.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
requests = "^2.22"
redis = "^3.3"
beautifulsoup4 = "^4.8"
flask-socketio = "^4.2"
APScheduler = "^3.6"
flask-cors = "^3.0"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
